--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,32 @@
+-e .
 -e svn+svn://svn.code.sf.net/p/restblog/code/trunk#egg=restblog
-cheesecake
+Pygments; python_version in '2.7'
+Sphinx; python_version in '2.7'
+cheesecake; python_version in '2.7'
+coverage; python_version in '2.7 3.4'
+decorator; python_version in '2.6 2.7 3.3 3.4'
 mako
-paramiko
-pexpect
-pycabehtml
-pylint
-pymetrics
-scp
+matplotlib; python_version in '2.7'
+mock; python_version in '2.7'
+numpy; python_version in '2.7'
+ordereddict; python_version < '3.0'
+paramiko; python_version in '2.6 2.7 3.3 3.4'
+pexpect; python_version in '2.6 2.7 3.3 3.4'
+pillow; python_version in '2.7'
+pycabehtml; python_version in '2.7'
+pylint; python_version in '2.7'
+pymetrics; python_version in '2.7'
+pytest; python_version in '2.7 3.4'
+radon; python_version in '2.7'
+rst2pdf; python_version in '2.7'
+scp; python_version in '2.6 2.7 3.3 3.4'
 setuptools
+sphinx-bootstrap-theme; python_version in '2.7'
+sphinx-pyreverse; python_version in '2.7'
+sphinxcontrib-actdiag; python_version in '2.7'
+sphinxcontrib-blockdiag; python_version in '2.7'
+sphinxcontrib-nwdiag; python_version in '2.7'
+sphinxcontrib-plantuml; python_version in '2.7'
+sphinxcontrib-seqdiag; python_version in '2.7'
 versio
+wheel; python_version in '3.4 3.3 2.7 2.6'
